# creditbench-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  init-db.sql  pyproject.toml
docs/: MIGRATION_TO_TEXT_TO_SQL.md  RISK_INDICATORS_SETUP.md  VECTOR_SEARCH_GUIDE.md  text_to_sql_rag_usage.md
examples/: sql_rag_demo.py
scripts/: add_risk_indicators_table.py  query_db.py  seed.py  setup_vector_search.py  verify_models.py  verify_risk_indicators_setup.py
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/db/: __init__.py  init_db.py  models.py  session.py
src/ingestion/: __init__.py  load_all.py  load_companies.py  load_credit_events.py  load_macros.py  load_risk_indicators.py
src/rag/: __init__.py  chain.py  embeddings.py  retriever.py  sql_retriever.py
tests/: README.md  conftest.py  test_queries.py  test_risk_indicators.py  test_sql_retriever_basic.py
